...
        if let groupDefaults = UserDefaults(suiteName: "group.dev.skynolimit.traintrack") {
            userDefaults = groupDefaults
        } else {
            userDefaults = .standard
        }
        #if DEBUG
        if ProcessInfo.processInfo.environment["UI_TEST_RESET_JOURNEYS"] == "1" {
            userDefaults.removeObject(forKey: journeysKey)
            userDefaults.removeObject(forKey: favouriteManualOrderKey)
            userDefaults.removeObject(forKey: myJourneysManualOrderKey)
            userDefaults.removeObject(forKey: "siri_default_route_id_v1")
            userDefaults.removeObject(forKey: "siri_route_names_v1")
            userDefaults.removeObject(forKey: "siri_route_names_v2")
        }
        #endif
        loadJourneys()
        loadManualOrders()
        #if DEBUG
        if ProcessInfo.processInfo.environment["APP_STORE_SCREENSHOTS"] == "1" {
            loadAppStoreScreenshotJourneys()
        }
        #endif
    }

    func loadJourneys() {
...
